# TextExtractorFromDocs

./: Dockerfile  description.md  pyproject.toml  testing.py
.github/workflows/: ci.yml
src/local_library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/locallib/: ingest.py  schemas.py
src/locallib/parsers/: office_parser.py  pdf_parser.py  txt_parser.py
tests/: test_ingest.py
